--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "dependencies": {
     "@testing-library/react": "^12.1.2",
-    "bootstrap": "^5.1.0",
+    "bootstrap": "^5.1.3",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
     "oidc-client": "^1.11.5",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
